k8s/db-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    name: mongo
  ports:
    - port: 27017
      targetPort: 27017
      name: mongo-cluster-ip-service
